# derpic

./: .gitignore  Cargo.toml  Dockerfile  compose.yml  plan.txt  readme.md
.github/workflows/: docker-image-dev.yml  docker-image.yml
migrations/2024-07-12-200156_create_tokens/: up.sql
migrations/2024-07-16-153855_create_images/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
src-web/: dash.js  index.html  login.css  login.js  pages.js  styles.css
src-web/boostrap/js/: bootstrap.js
src-web/derpic-about/: index.html
src-web/derpic-contact/: index.html
src-web/derpic-privacy/: index.html
src-web/login/: index.html
src/models/: images.rs  tokens.rs
